--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Lab1-Calc</string>
+    <string name="action_about">About</string>
+    <string name="action_settings">Settings</string>
+    <string name="about_description">Calculator app developed for Lab n°1 of the GTI785 (Mobile Application Systems) course.\n\nCopyright (c) 2021 Etienne Donneger</string>
+    <string name="about_contact_email_label">Contact me</string>
+    <string name="about_contact_github_label">It\'s open source !</string>
+    <string name="error_invalid_format_msg">Invalid format used.</string>
+    <string name="error_maximum_length_reached_msg">Can\'t enter more than %1$d characters.</string>
 </resources>
