--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,20 @@
 <resources>
     <string name="app_name" translatable="false">Lab1-Calc</string>
     <string name="action_settings">Settings</string>
-    <string name="about_description">Calculator app developed for Lab n°1 of the GTI785 (Mobile Application Systems) course.\n\nCopyright (c) 2021 Etienne Donneger</string>
+    <string name="delete_button_content_desc">Delete button</string>
+
+    <!-- About page -->
+    <string name="action_about">About</string>
+    <string name="about_description">Calculator app developed for Lab n°1 of the GTI785 (Mobile Application Systems) course.\n\nCopyright © 2021 Etienne Donneger</string>
     <string name="about_contact_email_label">Contact me</string>
     <string name="about_contact_github_label">It\'s open source !</string>
+
+    <!-- Errors -->
     <string name="error_invalid_format_msg">Invalid format used.</string>
-    <string name="error_maximum_length_reached_msg">Can\'t enter more than %1$d characters.</string>
-    <string name="action_about">About</string>
+    <string name="error_maximum_length_reached_msg">Can\'t enter more than %1$d character(s).</string>
+
+    <!-- Settings -->
+    <string name="setting_category_numbers">Numbers</string>
+    <string name="setting_title_precision">Precision</string>
+    <string name="setting_summary_precision">Set the maximum number of digits allowed per number</string>
 </resources>
